Profile And EditProfile

--- a/MyBlog.Mvc/Views/Shared/_Footer.cshtml
+++ b/MyBlog.Mvc/Views/Shared/_Footer.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="col-12 col-md-12 col-lg-6">
                 <hr class="d-lg-none">
-                <img src="/images/logo.png" alt=""> روبیک مارکت
-                <p>باگ آموزشی روبیک بلاگ به شما کمک می کند تا بتوانید بهترین انتخاب را داشته باشید.</p>
+                <img src="/images/logo.png" alt=""> روبیک بلاگ
+                <p>بلاگ آموزشی روبیک بلاگ به شما کمک می کند تا بتوانید بهترین انتخاب را داشته باشید.</p>
                 <div class="row">
                     <div class="col-12 col-md-6 text-center p-2" id="support-info">
                         <div>7 روز هفته، 24 ساعت شبانه روز</div>
