AddPost and listpostuser

--- a/MyBlog.Mvc/Views/Shared/Components/SideBarUserPanel/SideBarUserPanel.cshtml
+++ b/MyBlog.Mvc/Views/Shared/Components/SideBarUserPanel/SideBarUserPanel.cshtml
@@ -40,6 +40,20 @@
                             </div>
                         </a>
                     </li>
+                    <li>
+                        <a href="/Blog">
+                            <div>
+                                <div class="icon d-inline-block"><img src="/images/icons/profile-menu/profile.webp" class="pl-2"></div> پست های من
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/AddPost">
+                            <div>
+                                <div class="icon d-inline-block"><img src="/images/icons/profile-menu/profile.webp" class="pl-2"></div> افزودن پست جدید
+                            </div>
+                        </a>
+                    </li>
                     <li><hr></li>
                     <li>
                         <a href="/Logout">
