Addeditpost and deletepost and listdeletepost

--- a/MyBlog.Mvc/Views/Shared/Components/SideBarUserPanel/SideBarUserPanel.cshtml
+++ b/MyBlog.Mvc/Views/Shared/Components/SideBarUserPanel/SideBarUserPanel.cshtml
@@ -54,6 +54,13 @@
                             </div>
                         </a>
                     </li>
+                    <li>
+                        <a href="/ListDeletePost">
+                            <div>
+                                <div class="icon d-inline-block"><img src="/images/icons/profile-menu/profile.webp" class="pl-2"></div>پست های حذف شده
+                            </div>
+                        </a>
+                    </li>
                     <li><hr></li>
                     <li>
                         <a href="/Logout">
