--- a/MyBlog.Mvc/Views/Blog/ListDeletePost.cshtml
+++ b/MyBlog.Mvc/Views/Blog/ListDeletePost.cshtml
@@ -1,6 +1,7 @@
-﻿@model List<MyBlog.Application.DTOs.Posts.ListPostForUserViewModel>
+﻿
+@model List<MyBlog.Application.DTOs.Posts.ListPostForUserViewModel>
 @{
-    ViewData["Title"] = "لیست پست ها";
+    ViewData["Title"] = "لیست پست های حذف شده";
 }
 
 <div class="row">
@@ -18,15 +19,8 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <div class="col-md-12 container">
-
-                    <a asp-action="AddPost" asp-controller="Blog" class="btn btn-outline btn-success">افزودن پست جدید</a>
-
-                </div>
-
                 <div class="col-lg-12 container">
                     <div class="panel panel-default">
-  
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="table-responsive">
@@ -109,4 +103,6 @@
     </div>
     <!-- /.col-lg-12 -->
 </div>
+
+
 
