Add ManageUser and Posts and Roles in Admin with razor pages

--- a/MyBlog.Mvc/Pages/Shared/_NavbarStaticSide.cshtml
+++ b/MyBlog.Mvc/Pages/Shared/_NavbarStaticSide.cshtml
@@ -31,45 +31,21 @@
                 <!-- /.nav-second-level -->
             </li>
 
-            <li>
-                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> مدیریت محصولات<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="/Admin/Products"> محصولات</a>
-                    </li>
-                    <li>
-                        <a href="/Admin/Products/CreateProduct">افزودن محصول</a>
-                    </li>
-                    <li>
-                        <a href="/admin/ProductGroups">گروه محصولات</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
 
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> مدیریت پست ها<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="/Admin/Blogs"> پست ها</a>
+                        <a href="/Admin/Posts"> پست ها</a>
                     </li>
                     <li>
-                        <a href="/Admin/Blogs/CreatePost">افزودن پست</a>
+                        <a href="/Admin/Posts/CreatePost">افزودن پست</a>
                     </li>
                     <li>
-                        <a href="/admin/Blogs/ListDeletePost">پست های حذف شده</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> مدیریت کد های تخفیف<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="/Admin/Discounts">لیست تخفیف های سایت</a>
+                        <a href="/Admin/Posts/EditPost">ویرایش پست</a>
                     </li>
                     <li>
-                        <a href="/Admin/Discounts/CreateDiscount">افزودن کد تخفیف</a>
+                        <a href="/admin/Posts/ListDeletePost">پست های حذف شده</a>
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
